# openShimeji

./: README.md  meson.build
.cache/clangd/index/: main.cpp.6BE3ADDC20F16FEB.idx  raylib.h.89C2417FF81B8B65.idx
include/: Animation.h  GlobalMouse.h  Object.h  Rand.h  window.h
src/: Object.cpp  Pet.cpp  PhysicsObject.h  main.cpp  meson.build
